--- a/app/config.json
+++ b/app/config.json
@@ -1,4 +1,5 @@
 // Put configuration variables here.
 {
-	"AppName": "LiarsDice",
+	"AppName": "Bullpen",
+	"SocketHost": "https://192.168.43.225:9003"
 }
